fix: wrap footer on small screens

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -181,6 +181,7 @@ footer .footer-content{
     flex-flow: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 footer .footer-content > span:not(:last-child)::after {
